Settings for android studio

--- a/app/src/main/res/layout/activity_comment_feed.xml
+++ b/app/src/main/res/layout/activity_comment_feed.xml
@@ -11,6 +11,7 @@
 
     <!-- TODO: replace "temp title" with a landmark name -->
     <android.support.v7.widget.Toolbar
+
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -19,10 +20,13 @@
         app:title="temp title"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+
+        />
 
     <!-- recylcer view -->
     <android.support.v7.widget.RecyclerView
+
         android:id="@+id/comment_recycler"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
