--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFF</color>
+    <color name="colorPrimary">#FBFBFB</color>
     <color name="colorPrimaryDark">#15b24c</color>
     <color name="white">#FFFF</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="lightBlue">#badbfc</color>
-    <color name="light_cyan">#c5f7ef</color>
-    <color name="green">#15b24c</color>
-    <color name="default_text_color">#000</color>
+    <color name="lightBlue">#BADBFC</color>
+    <color name="light_cyan">#747B7F</color>
+    <color name="green">#15B24C</color>
+    <color name="default_text_color">#000000</color>
 </resources>
