--- a/app/src/main/res/layout/activity_berkeley__bears.xml
+++ b/app/src/main/res/layout/activity_berkeley__bears.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cs160_sp18.prog3.Berkeley_Bears"
     android:orientation="vertical"
+    android:background="#ffffff"
     >
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
-        app:titleTextColor="#000000"
-        app:title="Berkeley Bears"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:title="Berkeley Bears"
+        app:titleTextColor="#000000">
 
         <Button
             android:id="@+id/my_toolbarbutton"
@@ -28,12 +26,19 @@
             android:background="@color/white"
             android:padding="10dp"
             android:text="Update Location"
-            android:textColor="@color/green"
-            />
+            android:textColor="@color/green" />
+    </android.support.v7.widget.Toolbar>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:transcriptMode="alwaysScroll"
+        app:stackFromEnd="true"
+        >
+    </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+</LinearLayout>
