--- a/app/src/main/res/layout/activity_comment_feed.xml
+++ b/app/src/main/res/layout/activity_comment_feed.xml
@@ -37,7 +37,7 @@
         android:layout_alignParentTop="true"
         android:transcriptMode="alwaysScroll"
         app:stackFromEnd="true"
-
+        android:paddingTop="?attr/actionBarSize"
         />
 
     <RelativeLayout
